Updated the style especially on login box and form session

--- a/login.html
+++ b/login.html
@@ -3,13 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pet Care Tracker</title>
+    <title>Login</title>
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <main>
       <section class="login-section">
-        <h3>Login</h3>
+        <h1>PawTrack</h1>
         <p>Securely Access your personalized pet management.</p>
         <form action="">
           <input type="text" name="email" placeholder="Your email address" />
@@ -21,8 +25,7 @@
           <button>Login</button>
         </form>
         <div>
-          <p>Need to create an account?</p>
-          <a href="">Signup</a>
+          <p>Need to create an account? <a href="">Signup</a></p>
         </div>
       </section>
     </main>
