Created styling and html for the hompage or landing page

--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="login-body">
     <main>
       <section class="login-section">
         <h1>PawTrack</h1>
@@ -25,7 +25,13 @@
           <button>Login</button>
         </form>
         <div>
-          <p>Need to create an account? <a href="">Signup</a></p>
+          <p>
+            Need to create an account?
+            <a
+              href="/Users/isti/Documents/hacktive8/milestone-project/pet-care-tracker/signup.html"
+              >Signup</a
+            >
+          </p>
         </div>
       </section>
     </main>
