--- a/signup.html
+++ b/signup.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="signup-body">
     <main>
       <section class="login-section">
         <h1>PawTrack</h1>
@@ -31,7 +31,13 @@
           <button>Login</button>
         </form>
         <div>
-          <p>Already have an account? <a href="">Login</a></p>
+          <p>
+            Already have an account?
+            <a
+              href="/Users/isti/Documents/hacktive8/milestone-project/pet-care-tracker/login.html"
+              >Login</a
+            >
+          </p>
         </div>
       </section>
     </main>
