Updated the path for the link

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <li><a href="">About Us</a></li>
         <li><a href="">Contact Us</a></li>
       </ul>
+      <button>
+        <a href="./login.html">Login</a>
+      </button>
     </header>
     <main class="landing-page">
       <h1>Effortless Pet Care, Happy & Healthy Pets!</h1>
@@ -34,10 +37,7 @@
         <li>Never miss a meal or vet appointment again</li>
       </ul>
       <button>
-        <a
-          href="/Users/isti/Documents/hacktive8/milestone-project/pet-care-tracker/signup.html"
-          >Join Now</a
-        >
+        <a href="./signup.html">Join Now</a>
       </button>
     </main>
   </body>
