--- a/login.html
+++ b/login.html
@@ -27,10 +27,7 @@
         <div>
           <p>
             Need to create an account?
-            <a
-              href="/Users/isti/Documents/hacktive8/milestone-project/pet-care-tracker/signup.html"
-              >Signup</a
-            >
+            <a href="./signup.html">Signup</a>
           </p>
         </div>
       </section>
