--- a/signup.html
+++ b/signup.html
@@ -28,15 +28,12 @@
             name="password"
             placeholder="Enter your password"
           />
-          <button>Login</button>
+          <button>Signup</button>
         </form>
         <div>
           <p>
             Already have an account?
-            <a
-              href="/Users/isti/Documents/hacktive8/milestone-project/pet-care-tracker/login.html"
-              >Login</a
-            >
+            <a href="./login.html">Login</a>
           </p>
         </div>
       </section>
