--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <header>
       <h2>PawTrack</h2>
       <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">About Us</a></li>
-        <li><a href="">Contact Us</a></li>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./about-us.html">About Us</a></li>
+        <li><a href="./contact-us.html">Contact Us</a></li>
       </ul>
       <button>
         <a href="./login.html">Login</a>
