Added the contact us form

--- a/about-us.html
+++ b/about-us.html
@@ -55,7 +55,7 @@
         every tail wag and every purr count!
       </p>
 
-      <h2>Meet the Team</h2>
+      <h2>Meet the Team & Our Inspiration</h2>
       <p>
         Our team is made up of developers, designers, and pet owners who are
         passionate about making a difference in the pet care world. Inspired by
