--- a/contact-us.html
+++ b/contact-us.html
@@ -4,6 +4,59 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h2>PawTrack</h2>
+      <ul>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./about-us.html">About Us</a></li>
+        <li><a href="./contact-us.html">Contact Us</a></li>
+      </ul>
+      <button>
+        <a href="./login.html">Login</a>
+      </button>
+    </header>
+    <main class="contact-us">
+      <h1>Get in Touch</h1>
+      <p>
+        We’d love to hear from you! Fill out the form below and we’ll get back
+        to you soon.
+      </p>
+
+      <form>
+        <div class="name-fields">
+          <div>
+            <label for="first-name">First Name</label>
+            <input type="text" id="first-name" placeholder="John" required />
+          </div>
+          <div>
+            <label for="last-name">Last Name</label>
+            <input type="text" id="last-name" placeholder="Doe" required />
+          </div>
+        </div>
+
+        <label for="email">Email Address</label>
+        <input type="email" id="email" placeholder="your@email.com" required />
+
+        <label for="phone">Phone Number</label>
+        <input type="tel" id="phone" placeholder="+62 812 3456 7890" required />
+
+        <label for="message">Your Message</label>
+        <textarea
+          id="message"
+          rows="5"
+          placeholder="Type your message here..."
+          required
+        ></textarea>
+
+        <button type="submit">Send Message</button>
+      </form>
+    </main>
+  </body>
 </html>
