--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
   </head>
   <body class="login-body">
     <main>
-      <section class="login-section">
+      <section class="login-signup-section">
         <h1>PawTrack</h1>
         <p>Securely Access your personalized pet management.</p>
         <form action="">
