--- a/signup.html
+++ b/signup.html
@@ -12,7 +12,7 @@
   </head>
   <body class="signup-body">
     <main>
-      <section class="login-section">
+      <section class="login-signup-section">
         <h1>PawTrack</h1>
         <h3>Create Your Account</h3>
         <p>Securely Access your personalized pet management.</p>
