--- a/about-us.html
+++ b/about-us.html
@@ -9,10 +9,16 @@
       href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/images/favicon-32x32.png"
+    />
   </head>
   <body>
     <header>
-      <h2>PawTrack</h2>
+      <h2><a href="./index.html">PawTrack</a></h2>
       <ul>
         <li><a href="./index.html">Home</a></li>
         <li><a href="./about-us.html">About Us</a></li>
