--- a/signup.html
+++ b/signup.html
@@ -9,11 +9,17 @@
       href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/images/favicon-32x32.png"
+    />
   </head>
   <body class="signup-body">
     <main>
       <section class="login-signup-section">
-        <h1>PawTrack</h1>
+        <h1><a href="./index.html">PawTrack</a></h1>
         <h3>Create Your Account</h3>
         <p>Securely Access your personalized pet management.</p>
         <form action="">
